deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: infrastructure-qa-ctoperations
  name: webhook-listener
spec:
  selector:
    matchLabels:
      app: webhook-listener
  replicas: 1
  template:
    metadata:
      labels:
        app: webhook-listener
    spec:
      containers:
      - name: webhook-listener
        image: infacloud-ct-docker.jfrog.io/foundation/ctops/webhook:v1
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5000
      imagePullSecrets:
      - name: jfrog
