service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: infrastructure-qa-ctoperations
  name:  webhook-listener-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 5000
  selector:
    app:  webhook-listener
